--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <br>Kochamy Cię.
       </p>
       
-      <img id="inside-pic" src="png/mama.jpg">
+      <img id="inside-pic" src="png/mama.png">
       
       <p id="message">
         Życzą Michał i Marysia <3
